test-cases/negative/test_096_boolean_arithmetic.lay
# negative test: arithmetic operation on boolean
# expected: type checker should catch this

the variable x of type Bool is true
the variable y of type Number is x plus 5


